--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -6,7 +6,13 @@ Homepage
 {% block body_block %}
     <h1>Rango says...</h1>
     <div>
-        hey there partner! <br />
+        {% if user.is_authenticated %}
+            howdy {{ user.username }}!
+        {% else %}
+            hey there partner!
+        {% endif %}
+
+        <br />
         <strong>{{ boldmessage }}</strong><br />
     </div>
     <h2>Most Liked Categories</h2>
@@ -40,7 +46,6 @@ Homepage
     </div>    
     <div>
         <a href="/rango/about/">About</a><br />
-        <a href="/rango/add_category/">Add a New Category</a><br />
         <img src="{% static 'images/rango.jpg' %}"
         alt="Picture of Rango" /> 
     </div>
