--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -7,6 +7,7 @@ About Rango
     <h1>Rango says...</h1>
     <div>
         here is the about page. <br />
+        Visits: {{ visits }}
         <strong>{{ boldmessage }}</strong><br />
     </div>
     <div>
